fix a Deprecated call in WeekTest