@@ -21,7 +21,7 @@
  * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301,
  * USA.
  *
- * [Oracle and Java are registered trademarks of Oracle and/or its affiliates. 
+ * [Oracle and Java are registered trademarks of Oracle and/or its affiliates.
  * Other names may be trademarks of their respective owners.]
  *
  * -------------
@@ -36,9 +36,9 @@
 
 package pdk.chart.data.time;
 
-import pdk.chart.TestUtils;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import pdk.chart.TestUtils;
 
 import java.time.ZoneOffset;
 import java.util.*;
@@ -51,16 +51,24 @@ import static org.junit.jupiter.api.Assertions.*;
  */
 public class WeekTest {
 
-    /** A week. */
+    /**
+     * A week.
+     */
     private Week w1Y1900;
 
-    /** A week. */
+    /**
+     * A week.
+     */
     private Week w2Y1900;
 
-    /** A week. */
+    /**
+     * A week.
+     */
     private Week w51Y9999;
 
-    /** A week. */
+    /**
+     * A week.
+     */
     private Week w52Y9999;
 
     /**
@@ -165,18 +173,18 @@ public class WeekTest {
 
     /**
      * The first week in 2005 should span the range:
-     *
+     * <p>
      * TimeZone         | Start Millis  | End Millis    | Start Date  | End Date
      * -----------------+---------------+---------------+-------------+------------
      * Europe/London    | 1104710400000 | 1105315199999 |  3-Jan-2005 | 9-Jan-2005
      * Europe/Paris     | 1104706800000 | 1105311599999 |  3-Jan-2005 | 2-Jan-2005
      * America/New_York | 1104037200000 | 1104641999999 | 26-Dec-2004 | 1-Jan-2005
-     *
+     * <p>
      * In London and Paris, Monday is the first day of the week, while in the
      * US it is Sunday.
-     *
+     * <p>
      * Previously, we were using these values, but see Java Bug ID 4960215:
-     *
+     * <p>
      * TimeZone         | Start Millis  | End Millis    | Start Date  | End Date
      * -----------------+---------------+---------------+-------------+------------
      * Europe/London    | 1104105600000 | 1104710399999 | 27-Dec-2004 | 2-Jan-2005
@@ -204,18 +212,18 @@ public class WeekTest {
 
     /**
      * The 53rd week in 2004 in London and Paris should span the range:
-     *
+     * <p>
      * TimeZone         | Start Millis  | End Millis    | Start Date  | End Date
      * -----------------+---------------+---------------+-------------+------------
      * Europe/London    | 1104105600000 | 1104710399999 | 27-Dec-2004 | 02-Jan-2005
      * Europe/Paris     | 1104102000000 | 1104706799999 | 27-Dec-2004 | 02-Jan-2005
-     *
+     * <p>
      * The 53rd week in 2005 in New York should span the range:
-     *
+     * <p>
      * TimeZone         | Start Millis  | End Millis    | Start Date  | End Date
      * -----------------+---------------+---------------+-------------+------------
      * America/New_York | 1135486800000 | 1136091599999 | 25-Dec-2005 | 31-Dec-2005
-     *
+     * <p>
      * In London and Paris, Monday is the first day of the week, while in the
      * US it is Sunday.
      */
@@ -251,8 +259,7 @@ public class WeekTest {
                     TimeZone.getTimeZone("GMT"), Locale.UK);
             assertEquals(2005, w.getYearValue());
             assertEquals(52, w.getWeek());
-        }
-        finally {
+        } finally {
             Locale.setDefault(saved);
         }
     }
@@ -271,8 +278,7 @@ public class WeekTest {
             Week w = new Week(gc.getTime(), zone, Locale.UK);
             assertEquals(53, w.getWeek());
             assertEquals(new Year(2004), w.getYear());
-        }
-        finally {
+        } finally {
             Locale.setDefault(saved);
         }
     }
@@ -304,8 +310,7 @@ public class WeekTest {
             TimeZone zone = TimeZone.getTimeZone("America/Los_Angeles");
             Calendar cal = Calendar.getInstance(zone);
             assertEquals(-603302400000L, w.getFirstMillisecond(cal));
-        }
-        finally {
+        } finally {
             Locale.setDefault(saved);
         }
 
@@ -313,8 +318,7 @@ public class WeekTest {
         boolean pass = false;
         try {
             w.getFirstMillisecond((Calendar) null);
-        }
-        catch (NullPointerException e) {
+        } catch (NullPointerException e) {
             pass = true;
         }
         assertTrue(pass);
@@ -334,8 +338,7 @@ public class WeekTest {
         boolean pass = false;
         try {
             w.getFirstMillisecond((Calendar) null);
-        }
-        catch (NullPointerException e) {
+        } catch (NullPointerException e) {
             pass = true;
         }
         assertTrue(pass);
@@ -368,8 +371,7 @@ public class WeekTest {
             TimeZone zone = TimeZone.getTimeZone("America/Los_Angeles");
             Calendar cal = Calendar.getInstance(zone);
             assertEquals(-629913600001L, w.getLastMillisecond(cal));
-        }
-        finally {
+        } finally {
             Locale.setDefault(saved);
         }
 
@@ -377,8 +379,7 @@ public class WeekTest {
         boolean pass = false;
         try {
             w.getLastMillisecond((Calendar) null);
-        }
-        catch (NullPointerException e) {
+        } catch (NullPointerException e) {
             pass = true;
         }
         assertTrue(pass);
@@ -398,8 +399,7 @@ public class WeekTest {
         boolean pass = false;
         try {
             w.getLastMillisecond((Calendar) null);
-        }
-        catch (NullPointerException e) {
+        } catch (NullPointerException e) {
             pass = true;
         }
         assertTrue(pass);
@@ -459,8 +459,8 @@ public class WeekTest {
     }
 
     private void testNextPreviousWithCustomCalendar(int hoursOffset, String locale,
-                                            int secondWeekOffsetInDays,
-                                            BiConsumer<Integer, String> calendarSetup) {
+            int secondWeekOffsetInDays,
+            BiConsumer<Integer, String> calendarSetup) {
         try {
             calendarSetup.accept(hoursOffset, locale);
             long ms = secondWeekOffsetInDays * 86_400_000L - hoursOffset * 3_600_000L;
@@ -517,7 +517,9 @@ public class WeekTest {
     public void testConstructor() {
         Locale savedLocale = Locale.getDefault();
         TimeZone savedZone = TimeZone.getDefault();
-        Locale.setDefault(new Locale("da", "DK"));
+//        Locale.setDefault(new Locale("da", "DK"));
+        Locale.setDefault(Locale.of("da", "DK"));
+
         TimeZone.setDefault(TimeZone.getTimeZone("Europe/Copenhagen"));
         GregorianCalendar cal = (GregorianCalendar) Calendar.getInstance(
                 TimeZone.getDefault(), Locale.getDefault());
@@ -576,7 +578,7 @@ public class WeekTest {
     }
 
     private void testDateConstructorWithCustomCalendar(int hoursOffset, String locale, int secondWeekOffsetInDays,
-                                                       BiConsumer<Integer, String> calendarSetup) {
+            BiConsumer<Integer, String> calendarSetup) {
         try {
             calendarSetup.accept(hoursOffset, locale);
             long ms = secondWeekOffsetInDays * 86_400_000L - 3_600_000L * hoursOffset;
@@ -618,7 +620,7 @@ public class WeekTest {
     }
 
     private void testWeekIntYearConstructorWithCustomCalendar(int hoursOffset, String locale, int secondWeekOffsetInDays,
-                                                       BiConsumer<Integer, String> calendarSetup) {
+            BiConsumer<Integer, String> calendarSetup) {
         try {
             calendarSetup.accept(hoursOffset, locale);
             long ms = secondWeekOffsetInDays * 86_400_000L - 3_600_000L * hoursOffset;
@@ -660,7 +662,7 @@ public class WeekTest {
     }
 
     private void testWeekYearConstructorWithCustomCalendar(int hoursOffset, String locale, int secondWeekOffsetInDays,
-                                                       BiConsumer<Integer, String> calendarSetup) {
+            BiConsumer<Integer, String> calendarSetup) {
         try {
             calendarSetup.accept(hoursOffset, locale);
             long ms = secondWeekOffsetInDays * 86_400_000L - 3_600_000L * hoursOffset;
